--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <button class="refresh-btn" onclick="refreshAllData()" style="width: 120px; margin: 0;">🔄 Refresh</button>
   </header>
   
+  <!-- Status message -->
+  <div id="status" class="status loading">🔄 Loading data...</div>
+  
   <div class="container">
     <!-- LEFT COLUMN: Portfolio Info -->
     <div class="column column-left">
@@ -68,6 +71,11 @@
       </div>
       <div id="charts-container" style="padding: 12px; overflow-y: auto; flex: 1;"></div>
     </div>
+  </div>
+
+  <!-- Timestamp footer -->
+  <div style="text-align: center; padding: 12px; color: #8b949e; font-size: 0.85em;">
+    Last updated: <span id="last-update">Never</span>
   </div>
 
   <!-- Scripts in correct dependency order -->
