--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 
 
   <script src="js/sheets.js"></script>
+  <script src="js/charts.js"></script>
   <script>
     // Your Google Sheet ID
     const SHEET_ID = '1NADCWY48TpJU4jBrw0Bow1TEGxHBBwsTxwEstHDQPyU';
